--- a/MasterThesis_t/biblio.bib
+++ b/MasterThesis_t/biblio.bib
@@ -1,19 +1,19 @@
 @Article{Pablo,
   title =    {Scripting smart contracts
                   for distributed ledger technology},  
-  author =      "Pablo Lamela Seijas, Simon Thompson, Darryl McAdams",
-  volume =        "30",
-  year =         "2016",
-   month =        "12"
+  author =  {Pablo Lamela Seijas, Simon Thompson, Darryl McAdams},
+  volume =  {30},
+  year =   {2016},
+   month =  {12}
  },
 
 @Article{Matteo,
-	title =        "{Scripting smart contracts
-	for distributed ledger technology}",  
-	author =  "Pablo Lamela Seijas, Simon Thompson, Darryl McAdams",
-	volume =  "30",
-	year =  "2016",
-	month =  "12"
+	title =  {Scripting smart contracts
+	for distributed ledger technology},  
+	author =  {Pablo Lamela Seijas, Simon Thompson, Darryl McAdams},
+	volume = {30},
+	year =  {2016},
+	month =  12
 	
 },
  
@@ -23,13 +23,7 @@
  	DOI = {10.1007/978-1-4419-8834-8},
  	year = {1999}
  },
-@mastherthesis{Markos,
-	author  = {Kalimeris Markos},  
-	title   = {Indexes for Blockchain Data},
-	pages = 102,
-	year   = 2012,
-	month  = 2
-}
+
 @book{Ilya,
 	author = {Ilya Grishchenko, Matteo Maffei, and Clara Schneidewind},
 	title = {A Semantic Framework for the Security Analysis of Ethereum smart contracts},
@@ -166,7 +160,7 @@
 @conference{Sopek,
 	author       = {Mirek Sopek, Przemyslaw Gradzki, Witold Kosowski , Dominik Kozuski, Rafa Troczak, Robert Trypuz}, 
 	title        = {
-	WWW 18 Companion Proceedings of the The Web Conference 2018},
+	Companion Proceedings of the The Web Conference 2018},
 	
 	booktitle    = {GraphChain – A Distributed Database with Explicit Semantics and Chained RDF Graphs},
 	year         = 2018,
@@ -181,7 +175,7 @@
 	author       = {Allan Third, John Domingue}, 
 	title        = {Linked Data Indexing of Distributed Ledgers},
 	
-	booktitle    = {WWW 17 Companion Proceedings of the 26th International Conference on World Wide Web Companion },
+	booktitle    = {Companion Proceedings of the 26th International Conference on World Wide Web Companion },
 	year         = 2017,
 	volume       = 8,
 	month        = 5,
@@ -272,14 +266,14 @@
 	title   = {Indexes for Blockchain Data},
 	volume = 102,
 	year   = 2019,
-	month  = 2
+	month  = 2 
 	
 },
 @Masterthesis{Kevin, 	
-	author  = {Kevin Cribäck},  
+	author  = {Kevin Criback},  
 	title   = {Micro payment, Viable technical platforms and models for a bank
 	to provide payments on micro amounts},
-	volume = 38,
+	volume = 38,  
 	year   = 2018,
 	month  = 6
 	
