--- a/MasterThesis_t/abstract.tex
+++ b/MasterThesis_t/abstract.tex
@@ -1,11 +1,10 @@
 \begin{abstract}
-\textit{Smart contracts as computer code which reside on blockchain technologies are receiving great attention in new business application 
+\textit{Smart contracts as computer code which reside on blockchain, are receiving great attention in new business application 
 because they allow parties to represent contract terms in program code and
 thus eliminate the need for a trusted third party.
-The creation process of writing valid contracts in Ethereum is difficult task.
-Blockchain as distributed ledger technology is increasingly used as transnational data storage between parties and it gains good popularity among new industries in last few years. Blockchain implemented in different areas of applications such as social, healthcare, logistic and etc. It is also capable to execute smart contract and prevents data tampering by validating transaction through consensus protocol.
-Research on this topic is still on early stage in science.
-Based on an analysis of collected data and our works, we divide this research 
+The creation process of writing valid, transparent contracts is difficult task.
+Blockchain as distributed ledger technology is increasingly used as transnational data storage between parties and it gains good popularity among new industries in last few years. Blockchain implemented in different areas of applications such as social, healthcare, logistic and etc. It is also capable to execute smart contract and prevents data tampering by validating transaction through consensus protocol. 
+Research on this topic is still on early stage in science. Since our goal is to analysis the way of integrating semantic web licesing in this new technology and deploying smart contract, we divide this research 
 into 3 sections: first we focused on how smart contract build up on blockchain. Second, we demonstrate how blockchain can integrate with semantic web technology. It is focused on some solutions for indexing and executing smart contract on Ethereum blockchain. And third section, It is focused on use case: supply chain management system and how smart contract facilitates supply chain process and represented different models of ontology in this field, then implemented Etherum ontology concepts to model in semantic blockchain using RDF triples and SPRQL query.}
 
  
