--- a/MasterThesis_t/chapter2.tex
+++ b/MasterThesis_t/chapter2.tex
@@ -2,10 +2,10 @@
 
 \section{Distributed ledgers and indexing}
 A distributed ledger based on a blockchain does not have central control. Blockchains are organized into multiple blocks that initial block created manually and the other blocks are added by some consensus process between nodes.
-Ethereum smart contract provides the possibility of to control automatically what happens with cryptocurrency on the blockchain without involving the untrusted external sources. Ethereum smart contracts have an account that can normally store, update or make a function with the input and output.
+Ethereum smart contract provides the possibility to control automatically what happens with cryptocurrency on the blockchain without involving the untrusted external sources. Ethereum smart contracts have an account that can normally store, update, or make a function with the input and output.
 The concept\textit{accounts} are widely used in this study refer to an agent such as human and the concept \textit{balance} refers to cryptocurrency in blockchains. \\ 
-As already said, smart contracts are time-ordered where data are stored into blocks. therefore it requires the data to index. Indexing the smart contract gives us the capability to access the data, search, analysis services on the distributed ledger and expose them to outside the worlds for more of interactions.
-There are different levels of indexing smart contracts: Basic level is the fundamental level for the next step. It indexes basic entities such as account, blocks related to distributed level and data can be stored or retrieved here. In the functional level, smart contracts contain a lot of functional interfaces that depict the other functionality of platforms such as Ethereum \cite{Third}. 
+As already said, smart contracts are time-ordered where data are stored into blocks. therefore it requires the data to index. Indexing the smart contract gives us the capability to access the data, search, analyze services on the distributed ledger and expose them to outside the worlds for more of interactions.
+There are different levels of indexing smart contracts: Basic level is the fundamental level for the next step. It indexes basic entities such as account, blocks related to distributed level, and data can be stored or retrieved here. In the functional level, smart contracts contain a lot of functional interfaces that depict the other functionality of platforms such as Ethereum \cite{Third}. 
 
 \subsection{Why do we use ontology for Blockchain?}
 
@@ -13,7 +13,7 @@ Generally, Blockchain is the distributed database that replicated over all nodes
 This is where ontology comes to play to ensure a common interpretation of data of shared database among different enterprises.
 blockchain as a modeling form used a different type of ontology: \\
 \textbf{\textit{informal/semi ontology}} to facilitate search and enhance better understanding of the business process for developing and applying on the blockchain.\\
-\textbf{\textit{Formal ontology}} helps the formal specification to automate inference and  verify the operation of the blockchain. On the other word, blockchain modeling based on formal ontology can help the development of smart contract to execute on the blockchain.\\
+\textbf{\textit{Formal ontology}} helps the formal specification to automate inference and verify the operation of the blockchain. On the other word, blockchain modeling based on formal ontology can help the development of smart contract to execute on the blockchain.\\
 Also, we can use ontology to capture data within blockchain: On one hand, It facilitates a better understanding of blockchain concepts for human. On the other hand, enables interlinking with other link data to convey deductions and formal reasoning\cite{Matthew}.\\
 Vocabulary used within ontology increase the transparency of transaction in a way that by describing the transaction in the context of linked data comfort the graphical representation of the location of such transaction. Thus, it increases also the capability of analysis by users.
 
@@ -34,7 +34,7 @@ Vocabulary used within ontology increase the transparency of transaction in a wa
 \end{center}
 
 \subsection{Linked Data}
-Linked data is structure using vocabularies like schema.org to interlinked between different data and resources and it helps the semantic query of data. When information represents in linked data, querying about related information can be easily discovered. It is built up to standard web technologies such as:\\
+Linked data is structure using vocabularies like schema.org to interlinked between different data and resources and it helps the semantic query of data. When information represents in linked data, querying about related information can be easily discovered. It is built up to standard web technologies such as \\
 \textbf{- URIs}(Uniform Resource identifier) as names.\\ 
 \textbf{- HTTP} to search for names.\\
 \textbf{- (SPARQL, RDF)}  when a user search for something, provides related information.\\
@@ -55,24 +55,24 @@ Linked data is structure using vocabularies like schema.org to interlinked betwe
 \end{center}
 \subsection{RDF}
 The Resource Description Framework (RDF) is a family
-of W3C specifications. RDF is used to describe and model information. It describes as a subject predict object is called a triple.
+of W3C specifications. RDF is used to describe and model information. It describes as a subject that predicts an object is called a triple.
 i) Subjects that RDF expressions describe them.
-ii) predict is specific properties, attribute or relation to describe a resource.
+ii) predict is specific properties, attribute, or relation to describe a resource.
 iii) The object is the name of property or value.
 We can build a graph based on these three objects.
 
 \subsection{SPARQL}
-According to Wikipedia definition: It is semantic query language for a dataset that makes us able to retrieve and modify data stored in RDF format.    
+According to Wikipedia definition: It is a semantic query language for a dataset that makes us able to retrieve and modify data stored in RDF format.    
 
 \subsection{Ontology Web Language }
-Ontology Web Language is made to represent knowledge about things and the relations among them. OWL is a computational logic-based language, which means the language modeled in OWL can operate in a computer program like negation, intersection and so on.
- 
+Ontology Web Language is made to represent knowledge about things and the relations among them. OWL is a computational logic-based language, which means the language modeled in OWL can operate in a computer program like negation, intersection, and so on.
+
 \section{Vocabularies}
 \subsection{Vocabulary in Distributed Ledger}
-In order to generate linked data, it requires to use a standard ontology or vocabulary to explain the blockchain concepts. Interfaces between distributed ledgers and the Semantic Web are still on an early stage. Some systems define such vocabulary such as FlexLedger, EthOn, BLONDiE\cite{Third}.\\
+To generate linked data, it requires to use a standard ontology or vocabulary to explain the blockchain concepts. Interfaces between distributed ledgers and the Semantic Web are still on an early stage. Some systems define such vocabulary such as FlexLedger, Ethan, BLONDiE\cite{Third}.\\
 
-\textbf{\textit{FlexLedger}}: describes HTTP interfaces to blockchains, with a standard vocabulary and responses of these interfaces. FLexLedger is a protocol for decentralized ledger and graph data model which represents ledger creation, querying and data model using JSON-LD. However, FlexLedger does not have explicit vocabulary about ontology nor having concrete ontology for itself. 
-\\It is striking to say that the FlexLedger is not suitable to implement in some graph model like graphchain because in FlexLedger meta and the content data are stored together in the same graph whereas the GraphChain blocks’ content is stored outside the blockchain a separate graph \cite{Sopek}.\\
+\textbf{\textit{FlexLedger}}: describes HTTP interfaces to blockchains, with a standard vocabulary and responses of these interfaces. FLexLedger is a protocol for decentralized ledger and graph data model which represents ledger creation, querying, and data model using JSON-LD. However, FlexLedger does not have explicit vocabulary about ontology nor having concrete ontology for itself. 
+\\It is striking to say that the FlexLedger is not suitable to implement in some graph model like graph chain because in FlexLedger meta and the content data are stored together in the same graph whereas the GraphChain blocks’ content is stored outside the blockchain a separate graph \cite{Sopek}.\\
 
 \textbf{\textit{EthOn}} is an OWl ontology that describes blockchain classes such as \textit{"blocks, accounts, message" ,"state"}and relations such \textit{"has parent block"}\cite{Rashid}. 
 \begin{center}
@@ -102,7 +102,7 @@ In order to generate linked data, it requires to use a standard ontology or voca
 
 \textbf{\textit{Blockchain Ontology with Dynamic Extensibility}}    
 BLONDiE is another OWL ontology for describing the
-Blockchain structure like EthOn. But, it is more generic then EthOn. For example, EthOn and BLONDiE both defined some terms such as 'account', 'block', 'transaction' and some attributes such as 'transaction payload' or 'miner address'. BLONDiE defines some other concept for different Blockchain such as 'BitcoinBlockHeader' and 'EthereumBlockHeader' as subclasses of 'BlockHeader'. At the moment, BLONDiE supports two cryptocurrencies like bitcoin and Ethereum where all links and relationships between objects and attributes represent in RDF(Resource Description Framework)\cite{Third}.
+Blockchain structure like EthOn. But, it is more generic then EthOn. For example, EthOn and BLONDiE both defined some terms such as 'account', 'block', 'transaction', and some attributes such as 'transaction payload' or 'miner address'. BLONDiE defines some other concept for different Blockchain such as 'BitcoinBlockHeader' and 'EthereumBlockHeader' as subclasses of 'BlockHeader'. At the moment, BLONDiE supports two cryptocurrencies like bitcoin and Ethereum where all links and relationships between objects and attributes represent in RDF(Resource Description Framework)\cite{Third}.
 \begin{center}
 	\begin{figure}[htb!]
 		
@@ -121,15 +121,14 @@ As mentioned earlier, EthOn and BLONDiE are both similar concepts that can be us
 There are many works on semantic annotation of the web and HTTP APIs which may enable us to annotate smart contracts as well. However, the contracts are not Web API and implementation may differ but the main concept does not differ. In other words, the vocabularies used to annotate web services, are used to annotate smart contracts too. It seems that the Combination of a distributed ledger with smart contract and web service due to profitability becomes common\cite{Third}.
 
 \subsection{Ontology-based smart contract}
-Kim and Laskowski\cite{Kim} propose ontology can help in development of smart contact which an be executed on blockhchain. This approach can come up with proof of concept using Etheruem or other traceability ontology\cite{Hector}.
+Kim and Laskowski\cite{Kim} propose ontology can help in the development of smart contract which can be executed on the blockchain. This approach can come up with proof of concept using Etheruem or other traceability ontology\cite{Hector}.
 
 \subsection{Decentralized Storage and RDF}
 The main goal of data over the web is to make a data machine-readable format on the web. It causes to interpret data in suitable formats to be useful in a way that is human readable too. \\
 JSON-RPC is a remote procedure call protocol in JSON. This protocol allows sending data to the server without needing to the response. 
-Ethereum blockchain which has properties such as pay 
-fee with Gas. there are different ways of storing data in an RDF triple
-The most wallet in Ethereum in JSON format that is easily convertible to RDF and front-end is made up of HTML  technology that we can use it to embed data on the website interface as Microdata, JSON-LD. The main focus of research is the storage of data on blockchain itself. There exist limitations of storage in Ethereum blockchain and fees. that's why, it is suitable to use compact RDF serialization. There are some methods to store data on Ethereum  blockchain that are summarized in the table below\cite{
-Hector}:\\
+Ethereum blockchain which has properties such as pay fee with Gas. there are different ways of storing data in an RDF triple
+The most wallet in Ethereum in JSON format that is easily convertible to RDF and front-end is made up of HTML  technology that we can use it to embed data on the website interface as Microdata, JSON-LD. The main focus of research is the storage of data on blockchain itself. There exist limitations of storage in Ethereum blockchain and fees. that's why it is suitable to use compact RDF serialization. There are some methods to store data on Ethereum blockchain that are summarized in the table below\cite{
+	Hector}:\\
 
 \begin{center}
 	\begin{figure}[htb!]
@@ -166,13 +165,13 @@ There are some \textbf{definition of semantic blockchain:}\\
 \subsection{semantify Blockchain process}
 Semantic blockchain or semantic distributed ledger affects the industrial world and subsequently, the result leads to start developing new application and framework to combine two worlds:
 thee are some way to sanctify blockchain:
-\textbf{-}Mapping the basic blockchain to RDF making usage of vocabulary, ontology and so on.
+\textbf{-}Mapping the basic blockchain to RDF making usage of vocabulary, ontology, and so on.
 \textbf{-} Storage of data in a blockchain is expensive, The only way is to store the hashing point to data set in blockchain and then share RDF on the blockchain.
 \textbf{-} Create semantic blockchain that internal data exchange protocol is based on RDF\cite{Hector}.
 
 \subsection{Semantic Ontology Mapping}
-To generate RDF, it needs to map the basic blockchain entities to relevant semantic web terms, concepts and ontology. To make the query more efficient, BLONDiE used some ways such as: \\  
-Firstly, records relating to block and transactions both, have been completed with attribute for hashing to provide direct mapping between contents of index and address of entities on blockchain, Secondly, transaction is strengthened with link some enteties like: blocks or smart contract and input to originating contract.\\
+To generate RDF, it needs to map the basic blockchain entities to relevant semantic web terms, concepts, and ontology. To make the query more efficient, BLONDiE used some ways such as \\  
+Firstly, records relating to block and transactions both, have been completed with an attribute for hashing to provide a direct mapping between contents of index and address of entities on the blockchain, Secondly, the transaction is strengthened with link some entities like blocks or smart contract and input to originating contract.\\
 Blockchain stores just a binary form of each contract with metadata.   
 it requires to have the relevant Application Binary Interface (ABI) specification in JSON form to interact with such a contract. This specification is created when the smart contract is compiled and stored in the blockchain and also smart contracts will index on the blockchain in binary form. To interact with contract Application Binary(ABI) Interface specification is needed. This specification is in the form of JSON and created when a smart contract is compiled and stored in the blockchain. The ABI determines all functions of contracts and descriptions about input, output parameter for each contract\cite{Third}.
 
@@ -188,14 +187,14 @@ it requires to have the relevant Application Binary Interface (ABI) specificatio
 	\end{figure}
 	
 \end{center}
-By the presence of address and ABI, it is obvious to generates RDF to index smart contract.
+By the presence of address and ABI, it is obvious to generate RDF to index smart contracts.
 Allan Third at el.\cite{Third}model smart contract as follow:\\
 - A contract as \textit{msm:Service}\\
 - A function as \textit{msm:operation} with (\textit{msm:hasInput} or \textit{hasOutPut}) related to suitable \textit{msm:MessageContent}\\
 - A msm:Service records contains the blockchain address as an attribute to keep the index into blockchain.
 
 \subsection{Minimal Service Model}
-The MSM defines a service that has Operations. Operations have input, output and default MessageContent that may include mandatory or optional MessageParts. MessagePart provides support for finer-grained input/output discovery, as available in OWL-S and WSMO\cite{Rashid}.
+The MSM defines a service that has Operations. Operations have input, output, and default MessageContent that may include mandatory or optional MessageParts. MessagePart provides support for finer-grained input/output discovery, as available in OWL-S and WSMO\cite{Rashid}.
 
 \begin{center}
 	\begin{figure}[htb!]
@@ -246,10 +245,10 @@ Semantic Web, where people can access to linked information
 fast and easy. But now, with the emergence of a decentralized
 web powered by Blockchain technology and since it enables
 unmediated transactions, there is a new focus on the Web 3.0
-based on through the trustful nature of the blockchain. It is
+based on the trustful nature of the blockchain. It is
 the “read-write-own web”. Here, the user owns and participate
 in owning the protocol. It is both peer to peer and machine
-to machine. And it is applicable to people, companies and
+to machine. And it applies to people, companies, and
 autonomous entities [14].
 For instance, the term Web 3.0 is used by Ethereum in
 a different context than the suggested by Berners-Lee. It is
@@ -263,19 +262,19 @@ or offer it to the NSA, and of course nothing to DDoS”.
 
 \section{Retrieve Information form semantic blockchain}
 Reasoning and knowledge representation in the semantic web is based on Description Logic(DL). Description logic has some elements such: classes and properties, the link between a different object, etc. Ontology is the study about the objects and relations between these objects or entities.
-Each DL has set of constructors to combine the concept and roles.
-Concepts used in inclusion and definition axiom that model knowledge domain. These axioms called terminological box(TBox) with respect to ontology individual axioms from Assertion Box (ABox). ABox and TBox create Knowledge Base(KB). \\
+Each DL has a set of constructors to combine the concept and roles.
+Concepts used in inclusion and definition axiom that model knowledge domain. These axioms called terminological box(TBox) concerning ontology individual axioms from Assertion Box (ABox). ABox and TBox create Knowledge Base(KB). \\
 This study extends in the keeping with the retrieving the most relevant resources for a given query by the requester, where both query and resources are ontology-based and matched called semantic matchmaking. This process leads to two approach \textit{full match}, \textit{no match}. 
 For request $R$ and resource check whether all features in request exist in $S$.
-The classic inference service is capable to Boolean match approach.
-But, It is not enough because fully matched is rare. Non-standard inference determines the semantic ranking of resource with respect to request and logic based results.
+The classic inference service is capable of to Boolean match approach.
+But, It is not enough because fully matched is rare. Non-standard inference determines the semantic ranking of resources concerning request and logic-based results.
 If request and resource are not compatible:\\
--  contradiction concept which part $R$ is not compatible by $S$. Consider $G$ is the part that has conflict and $K$ as part where $S$ and $R$ are compatible.\\
+-  contradiction concept which part $R$ is not compatible with $S$. Consider $G$ is the part that has conflict and $K$ as a part where $S$ and $R$ are compatible.\\
 - Concept Abduction: $R$ and $S$ are compatible but $S$ not match fully with $R$.
-consider $H$ as Hypothesis that represent what is request in $R$ and not exist in $S$.
-If $R$ and $S$ are not matched. Use contraction to represent $K$ part(compatible part) and $H$ hypethesis to suggest part to reach full match.\\
-Moreover, used number of element $G$ and $H$ in penalty function computation to define semantic distance matrix.
-This matrix can be used to rank resource with regard to request\cite{Ruta}. 
+consider $H$ as a Hypothesis that represents what is request in $R$ and not exist in $S$.
+If $R$ and $S$ are not matched. Use contraction to represent $K$ part(compatible part) and $H$ hypothesis to suggest part to reach full match.\\
+Moreover, we used the number of an element $G$ and $H$ in penalty function computation to define the semantic distance matrix.
+This matrix can be used to rank resources concerning request\cite{Ruta}. 
 
 \subsection{Semantic Blockchain Architecture} 
 This method purposed a framework based on the semantic discovery layer built upon basic blockchain. It is striking to see the main features of such a blockchain as follow:
@@ -304,7 +303,7 @@ This method purposed a framework based on the semantic discovery layer built upo
 \subsection{Making smarter Contract: Putting Semantic in Consensus Protocol}
 
 In the semantic blockchain, EthOn or BLONDiE concepts and vocabulary to facilitate integrity and develop resource discovery. EthOn concept used W3CRDF schema and web ontology language to describe blockchain contract concepts. By the use of these concepts, it is possible to compare requests with different recourse concerning semantic annotation of shared domain ontology. \\
-Smart contract semantic is represented by a service layer that gives a correct description of discovery outcome. Thus, it raises the trust of the discovery process for users. In the semantic blockchain, Baqa et al.\cite{Baqa} used domain ontology to maps to EthOn contract. These concepts used for OWL-S ontology, indexing and invoking smart contracts on Blockchain via URIs\cite{Baqa}. 
+Smart contract semantic is represented by a service layer that gives a correct description of discovery outcome. Thus, it raises the trust of the discovery process for users. In the semantic blockchain, Baqa et al.\cite{Baqa} used domain ontology to maps to EthOn contract. These concepts used for OWL-S ontology, indexing, and invoking smart contracts on Blockchain via URIs\cite{Baqa}. 
 Semantic blockchain also performs operations such as registration, discovery, selection, and execution that are implemented as a smart contract. \\
 Ruta at el.\cite{Ruta} focused on semantic mismatching as a significant feature of semantic blockchain concerning basic blockchain. This allows computing the semantic distance between resources and queries with the same ontology.
 The logic-base matrix enforces the semantic ranking of the element of the query\cite{Ruta}. \\ 
@@ -333,7 +332,7 @@ After all, a smart contract is developed with vocabulary as domain-based-ontolog
 \end{center} 
 
 \textbf{B: Smart Contract}
- EthOn and OWl concepts used to build semantic web service for smart contracts. OWL-S ontology is used that makes functionalities such discover, invoke and monitor by providing some additional vocabulary along with smart contract concepts facilitate query to finding a smart contract. The OWL-S ontology provides three types of description about service as follow: \\
+EthOn and OWl concepts used to build semantic web service for smart contracts. OWL-S ontology is used that makes functionalities such discover, invoke, and monitor by providing some additional vocabulary along with smart contract concepts to facilitate query to finding a smart contract. The OWL-S ontology provides three types of description about service as follow: \\
 
 
 \begin{center}
@@ -373,7 +372,7 @@ Baqa et al. here used the $gossip$ approach to propagate the request. The nodes 
 Second, send the request to other $n$ nodes randomly, the other nodes perform in the same way until reach the $m$ thresholds. the request continue until reach the $\sum_{i=1}^{m} n^i$ with $n$ and $n$ parameters. Then do not forward the request and perform matchmaking locally.\\
 Afterward, the nods send back the result to the main requester at the specified address\cite{Baqa}.\\
 
-\textbf{C: Explanation} In this process, the requester sends the request containing: Semantic is the annotation of request and URI od related resource. The receiver node response matchmaking result that encompasses the semantic dependency score in [0,1]interval and the concept expression of G (conflicting part between R and S), K(the compatible part between R and S) and H(the hypothesis concept to reach the matchmaking). This process is optional and needed when the requester needs the explanation of matchmaking results.
+\textbf{C: Explanation} In this process, the requester sends the request containing: Semantic is the annotation of request and URI od related resource. The receiver node response matchmaking result that encompasses the semantic dependency score in [0,1]interval and the concept expression of G (conflicting part between R and S), K(the compatible part between R and S), and H(the hypothesis concept to reach the matchmaking). This process is optional and needed when the requester needs the explanation of matchmaking results.
 
 \textbf{C: Resource Selection:} After receiving all results, the requester selects the best resource and smart contract, sending a message to the resource owner and contextually payment. the receiver responses with the proper resource representation relied on the meaning of uri[4].
 The resource discovery and retrieval interaction are shown bellow and Each associated transaction is recorded on the blockchain\cite{Ruta}.
@@ -395,7 +394,7 @@ The resource discovery and retrieval interaction are shown bellow and Each assoc
 \subsection{Indexng of Smart Contract}
 As already mentioned, the distributed ledger does not have a central registry due to its structure. The contract in this distributed ledger is not directly queried.
 and blockchain is the time-ordered structure where data exist on multiple blocks.
-In such a distributed structure, developing the indexing process for the smart contract is necessary. The indexing system provides the ability to analysis and search service on blockchain and displays the outside.
+In such a distributed structure, developing the indexing process for the smart contract is necessary. The indexing system provides the ability to analyze and search service on blockchain and displays the outside.
 There is a different level of indexing such as low level to index basic entities such as account, transaction, block and the top level for more functional operations is indexed.
 
 \subsection{EthOn}
@@ -403,7 +402,7 @@ Is an ontology that describes blockchain concepts such as transaction, account, 
 schema and ontology web language OWL to describe the relation of these objects on the blockchain.
 To model data and be understandable for resource, EthOn and some semantic such as "hasParentBlock".
 EthOn in at infancy and should develop more to have smart contract concepts, functions, events, input, and output, etc.
-EthOn accepts consider just some relation between smart contract and Ethereum framework. Some multiple tools and languages can annotate a smart contract. In this study, It is focused on OWL-S ontology due to some significant features such as flexibility, widely description of service and no- restriction... 
+EthOn accepts consider just some relation between smart contract and Ethereum framework. Some multiple tools and languages can annotate a smart contract. In this study, It is focused on OWL-S ontology due to some significant features such as flexibility, wide description of service, and no- restriction... 
 The main goal is to develop to support the smart contract too for semantic web service context.
 For reaching this aim, the web graph chain is PI and a smart contract can be represented as an executable function in a distributed environment. The semantic web describes message, service, and entities in a machine-readable format that can support logical reasoning based on semantic web service description. It helps to map between different ontologies that facilitate the transformation of the concepts among ontologies\cite{Baqa}. 
 
