small changes in bib

--- a/MasterThesis_t/biblio.bib
+++ b/MasterThesis_t/biblio.bib
@@ -7,14 +7,13 @@
    month =  {12}
  },
 
-@Article{Matteo,
-	title =  {Scripting smart contracts
-	for distributed ledger technology},  
-	author =  {Pablo Lamela Seijas, Simon Thompson, Darryl McAdams},
-	volume = {30},
+@Article{Matthew,
+	title =  {Block Chain Technologies & The Semantic Web:
+	A Framework for Symbiotic Development},  
+	author =  {Matthew English1, Soren Auer1, and John Domingue2},
+	pages = {15},
 	year =  {2016},
-	month =  12
-	
+
 },
  
  @article{Ozsu,
@@ -59,8 +58,7 @@
 	Giovanna Capurso, Agnese Pinto, and Eugenio Di Sciascio}, 
 	title   = {A Blockchain Infrastructure for the Semantic
 	Web of Things},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
-	volume  = 12,
+	pages  = 12,
 	month = 1,
 	year = 2018 
 },
@@ -96,9 +94,8 @@
 
 @article{Hector,
 	author  = {Hector Ugarte }, 
-	title   = {A more pragmatic Web 3.0: Linked Blockchain Data},
-	url = {https://semanticblocks.files.wordpress.com/2017/03/linked_blockchain_paper_final.pdf}, 
-	DOI= {10.13140/RG.2.2.10304.12807/1}
+	title   = {A more pragmatic Web 3.0: Linked Blockchain Data}, 
+	DOI= {10.13140/RG.2.2.10304.12807/1},
 	volume = 15, 
 	month = 1,
 	year = 2017
