add cite to latex

--- a/MasterThesis/Smart_Contract.tex
+++ b/MasterThesis/Smart_Contract.tex
@@ -19,6 +19,7 @@
 \usepackage{enumitem}
 \usepackage{multicol}
 \usepackage{mathtools}
+\usepackage[export]{adjustbox}
 \usepackage[square,sort,comma,numbers]{natbib}
 %input macros (i.e. write your own macros file called mymacros.tex 
 %and uncomment the next line)
