--- a/MasterThesis/appendix1.tex
+++ b/MasterThesis/appendix1.tex
@@ -5,9 +5,9 @@ The appendix comprises semantic mapping elements described and the source code f
 \begin{center}
 	\begin{figure}[htb!]
 		
-		\begin{minipage}{0.2\linewidth}
-			\centering
-			\hspace{3cm}\includegraphics[width=2.5\textwidth]{images/chap03_web3_schema.png}
+		\begin{minipage}{0.15\textwidth}
+           \centering
+			\includegraphics[width=1.95\textwidth]{images/chap03_web3_schema.png}
 		\end{minipage}
 	
 	\end{figure}
