--- a/MasterThesis/chapter3.tex
+++ b/MasterThesis/chapter3.tex
@@ -1,27 +1,27 @@
 \chapter{DALICC}
 \section{DALICC}
-According to [], DALICC stands for Data Licenses Clearance Center. It is software framework that helps people to legally secure data from third party and help to detect licensing conflicts and reducing the costs of rights clearance by enabling automated clearance right in creation of derivative works. 
+According to \textit{Tassilo}, DALICC stands for Data Licenses Clearance Center. It is a software framework that helps people to legally secure data from a third party and help to detect licensing conflicts and reduce the costs of rights clearance by enabling automated clearance right in the creation of derivative works \cite{Tassilo}. 
 \subsection{DALICC Requirements}
-The following requirements would be addressed by DALICC framework:\\
+The following requirements would be addressed by the DALICC framework:\\
 \begin{itemize}
 	\item \textit{Tackling license heterogeneity:} \\
-	It is possible to combine the various contents which having the same license with different names. But that would be much difficult to license the resultant of the combined contents. To solve this issue, DALICC provides set of machine-readable representation of licenses that allow to compare licenses to each other to identify the equivalent licenses. It guides the user to possible conflicts of various combined licenses.
+	It is possible to combine the various contents which have the same license with different names. But that would be much more difficult to license the resultant of the combined contents. To solve this issue, DALICC provides a set of machine-readable representations of licenses that allow us to compare licenses to each other to identify the equivalent licenses. It guides the user to possible conflicts of various combined licenses.
 	\item \textit{Tackling REL heterogeneity:} \\
-	Combing licenses are simple, if they are express through the same RED. But, it is difficult to compare licenses have been represented by different RELs.\\
-	DALICC resolve this problem, by representing RELs based on semantic web, map the terms to each other. It will represent exiting RELs based on  W3C-approved standards, thus allow mapping between various RELs to be created.
+	Combing licenses are simple if they are expressed through the same RED. But, it is difficult to compare licenses that have been represented by different RELs.\\
+	DALICC resolves this problem, by representing RELs based on the semantic web and mapping the terms to each other. It will represent exiting RELs based on  W3C-approved standards, thus allowing mapping between various RELs to be created.
 	\item \textit{Compatibility check, conflict detection and neutrality of the rules:} \\
-	It is difficult to be sure, if the meaning of the different terms in semantic are aligned. This problems result from indicating the classes, instances and properties which can not be handled just by mapping.\\
-	This is where DALICC comes to play and helps user with a workflow that define the usage context, then gathering additional information to detect conflicts and ambiguous concepts. Based on this information, DALICC make reasoning over the set of licenses and infers the instruction to user how to process with license processing.\\
+	It is difficult to be sure if the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties which can not be handled just by mapping.\\
+	This is where DALICC comes to play and helps the user with a workflow that defines the usage context, then gathers additional information to detect conflicts and ambiguous concepts. Based on this information, DALICC makes reasoning over the set of licenses and infers the instruction to the user on how to process with license processing.\\
 	\item \textit{Legal validity of representations and machine recommendations:} \\
-	According to Anna Fensel\cite{Anna}, The semantic complexity of licensing issues means that the semantics of RELs must be clearly aligned within the specific application scenario. This includes a correct interpretation of the various national legislations according to the country of origin of a jurisdiction (i.e. German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilinguality and the consideration of existing case law in the resolution of licensing conflicts.\cite{Anna}\\
-	To solve this problem, DALICC will check the legal validity of machine-readable license and compatibility of reasoning engine output with law. DALICC output will be testes against law and checked the semantic precision of derived from different language and adjusted them.
+	According to Anna Fensel\cite{Anna}, The semantic complexity of licensing issues means that the semantics of RELs must be aligned within the specific application scenario. This includes a correct interpretation of the various national legislation according to the country of origin of a jurisdiction (i.e. German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilingual, and the consideration of existing case law in the resolution of licensing conflicts.\cite{Anna}\\
+	To solve this problem, DALICC will check the legal validity of machine-readable licenses and the compatibility of reasoning engine output with the law. DALICC output will be tested against the law and checked the semantic precision derived from different languages and adjusted them\cite{Anna}.
 	
 \end{itemize}
 \subsection{DALICC Software Architecture}
-To address the above challenges DALICC framework consist of four components:\\
+To address the above challenges DALICC framework consists of four components:\\
 \begin{itemize}
-	\item \textbf{License composer} is tools that allowed the license to be created from set of questions which are mapped to ODRL, ccREL and the DALICC vocabularies and concepts.
-	\item \textbf{License library} is a repository that represents licenses in machine-readable format , the former as ORDL policies and the letters as plain text.
-	\item \textbf{License annotator} allows to attache license to dataset, either by choosing available licenses in license library or create new license using license composer.
-	\item \textbf{License negotiator} as main component in DALICC framework that checks the license compatibility and support license conflicts by detecting equivalence license having various names.
+	\item \textbf{License composer} is a tool that allowed the license to be created from a set of questions that are mapped to ODRL, ccREL, and the DALICC vocabularies and concepts.
+	\item \textbf{License library} is a repository that represents licenses in a machine-readable format, the former as ORDL policies and the letters as plain text.
+	\item \textbf{License annotator} allows attaching licenses to the dataset, either by choosing available licenses in the license library or creating a new license using license composer.
+	\item \textbf{License negotiator} as a main component in the DALICC framework that checks the license compatibility and supports license conflicts by detecting equivalence licenses having various names \cite{Anna}.
 \end{itemize}
