--- a/MasterThesis/conclusions.tex
+++ b/MasterThesis/conclusions.tex
@@ -1,10 +1,10 @@
 \chapter{Conclusion}
-This work contributes to  integrate semantic licenses from DALICC library with smart contract and some problems that are still open in literature spacial when considering the few works that integrate blockchain with semantic web.\\
- For this purpose, We focused two things as infrastructure of our work:\\
- One is etherum Platform that is developed and implemented to keep the system reliable, secure, autonomous and decentralized.\\
- Second one is Ethon ontology that formalizes the concepts and terms of the Ethereum Blockchain in OWL, describing the Ethereum objects as
-classes in ontology. Its covers the main Blockchain concepts as Blocks, Accounts, Transactions, Contract Messages and relation between the instances of these classes.
-therefore, licensing system has been created in which keep the integrity of license information, also provided semantic view of such deployment environment using Ethon ontology concepts.\\
-To do this, user is guided to start licensing and get its licensing receipt step by step. \\
-This DApp also has its limitations and for most of them, solutions have been defined. Thus, in this work, we have developed the basic methods for the license attachment to data and also developed semantic mapping for the result of this attachment process as receipt.
+This work contributes to integrating semantic licenses from the DALICC library with smart contracts and some problems that are still open in the literature special when considering the few works that integrate blockchain with semantic web.\\
+ For this purpose, We focused on two things as the infrastructure of our work:\\
+ One is the Ethereum Platform which is developed and implemented to keep the system reliable, secure, autonomous, and decentralized.\\
+ The second one is Ethon ontology which formalizes the concepts and terms of the Ethereum Blockchain in OWL, describing the Ethereum objects as
+classes in ontology. It covers the main Blockchain concepts as Blocks, Accounts, Transactions, Contract Messages, and the relation between the instances of these classes.
+therefore, licensing system has been created which keeps the integrity of license information and also provided a semantic view of such deployment environment using Ethon ontology concepts.\\
+To do this, the user is guided to start licensing and get its licensing receipt step by step. \\
+This DApp also has its limitations and for most of them, solutions have been defined. Thus, in this work, we have developed the basic methods for the license attachment to data and also developed semantic mapping for the result of this attachment process as a receipt.
 
