--- a/MasterThesis/refs.bib
+++ b/MasterThesis/refs.bib
@@ -283,5 +283,29 @@ volume = 68,
 year   = 2017,
 
 },
+@article{Tassilo, 
+author  = {Tassilo Pellegrini},  
+title   = {Detecting Licensing Conflicts with DALICC},
+url = {http://ffhoarep.fh-ooe.at/bitstream/123456789/1025/1/Panel_120_ID_193.pdf}, 
+volume = 5,
+year   = 2017,
+
+},
+@article{Anna, 
+author  = {Tassilo Pellegrini, Simon Steyskal, Oleksandra Panasiuk, Anna Fensel},  
+title   = {Automated Rights Clearance Using Semantic Web Technologies},
+DOI = {DOI: 10.1007/978-3-662-55433-3_14}, 
+volume = 16,
+year   = 2018,
+
+},
+@article{fips, 
+published by  = {FIPS 202 },  
+title   = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
+DOI = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
+volume = 37,
+year   = 2015,
+
+},
 
 
