--- a/MasterThesis/chapter1.tex
+++ b/MasterThesis/chapter1.tex
@@ -46,13 +46,13 @@ Blockchain is associated with cryptocurrencies like Ethereum, bitcoin, lite coin
 
 \subsection{Type of Blockchian}
 According to Athital\cite{Athital} blockchain is used to transfer and exchange information through the secure network. Primarily, there were two types of blockchain technology public and private networks. Some analyses on blockchain technology can also be called blockchain as consortium blockchain technology and hybrid blockchain technology. \\
-That should be noted that all kinds of blockchains consist of nodes and works on \textit{P2P} network. Athital \cite{Athital} classified blockchain into three types as bellow: public blockchain, private blockchain, and consortium blockchain. Besides this, there is another type of blockchain, known as the hybrid blockchain.
+That should be noted that all kinds of blockchains consist of nodes and works on \textit{P2P} network. Aithal \cite{Aithal} classified blockchain into three types as bellow: public blockchain, private blockchain, and consortium blockchain. Besides this, there is another type of blockchain, known as the hybrid blockchain.
 \begin{itemize}
     \item \textbf{Public Blockchain}
     This system allows anyone to join to network and create consensuses such as Ethereum. In a public blockchain, any miner (participant) can create consensus mechanisms such as proof of work, and proof of stack to validate the transaction with a low rate of validity\cite{Kalra}.
     \item \textbf{Private Blockchain}: In this system, the only restricted participant has the right to validate the transaction. Therefore, it provides better privacy, improves scalability, and mitigates security issues. This blockchain does not have mining computation to reach the consensus because all participants are known in this network\cite{Kalra}. 
-    \item \textbf{Consortium Blockchain}: This is semi-decentralized blockchain. This type of blockchain is used to do activities for a single organization like an organization, bank, etc. The difference between private blockchain with this type is that Consortium Blockchain is controlled by a group rather than a single authority \cite{Athital}.
-    \item \textbf{Hybrid Blockchain}: This type is a combination of public and private blockchains. Thus, it makes the benefit of privacy in private blockchain combined with the security and transparency of the public blockchain. In this type of blockchain, the user can control who gets access to which data on the blockchain. A transaction can be verified in a private network, and the user can release it to the public blockchain. By doing so, only selected parts of the records can be accessible in public and the rest could still maintain confidential in a private network\cite{Athital}. 
+    \item \textbf{Consortium Blockchain}: This is semi-decentralized blockchain. This type of blockchain is used to do activities for a single organization like an organization, bank, etc. The difference between private blockchain with this type is that Consortium Blockchain is controlled by a group rather than a single authority \cite{Aithal}.
+    \item \textbf{Hybrid Blockchain}: This type is a combination of public and private blockchains. Thus, it makes the benefit of privacy in private blockchain combined with the security and transparency of the public blockchain. In this type of blockchain, the user can control who gets access to which data on the blockchain. A transaction can be verified in a private network, and the user can release it to the public blockchain. By doing so, only selected parts of the records can be accessible in public and the rest could still maintain confidential in a private network\cite{Aithal}. 
 \end{itemize}
 
  \section{Ethereum}
