--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -315,5 +315,12 @@
 	year   = 2015,
 	
 },
-
+@article{Ozsu, 
+	author  = {Tamer Özsu},  
+	title   = {Distrubuted database systems},
+	Url = {https://www.researchgate.net/publication/228806512_Distributed_Database_Systems}, 
+	volume = 25,
+	year   = 2002,
+	
+},
 
